tests/colliding-instances.stderr
error: this instance collides with 1 other instances
  ┌─ test:5:1
  │
4 │ instance (T X) : ()
  │ -------------- this instance could apply to the same type(s)
5 │ instance (T X) : ()
  │ ^^^^^^^^^^^^^^ try making this instance more specific
  │
  = for more information, see https://wipple.dev/playground/?lesson=errors/colliding-instances

error: this instance collides with 2 other instances
  ┌─ test:7:1
  │
4 │ instance (T X) : ()
  │ -------------- this instance could apply to the same type(s)
5 │ instance (T X) : ()
  │ -------------- this instance could apply to the same type(s)
6 │ 
7 │ instance (T _) : ()
  │ ^^^^^^^^^^^^^^ try making this instance more specific
  │
  = for more information, see https://wipple.dev/playground/?lesson=errors/colliding-instances

error: this instance collides with 3 other instances
   ┌─ test:10:18
   │
 4 │ instance (T X) : ()
   │ -------------- this instance could apply to the same type(s)
 5 │ instance (T X) : ()
   │ -------------- this instance could apply to the same type(s)
 6 │ 
 7 │ instance (T _) : ()
   │ -------------- this instance could apply to the same type(s)
   ·
10 │ A where (U A) => instance (T A) : ()
   │                  ^^^^^^^^^^^^^^ this instance may have different bounds than the others, but one type could satisfy the bounds on more than one of these instances simultaneously
   │
   = for more information, see https://wipple.dev/playground/?lesson=errors/colliding-instances

